fix text alignment

--- a/sass/_options.scss
+++ b/sass/_options.scss
@@ -14,7 +14,7 @@ $enable-shadows:              false;
 $enable-gradients:            false;
 $enable-transitions:          true;
 $enable-reduced-motion:       true;
-$enable-smooth-scroll:        true;
+$enable-smooth-scroll:        false;
 $enable-grid-classes:         true;
 $enable-cssgrid:              false;
 $enable-button-pointers:      false;
