--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -295,6 +295,16 @@ $spinner-border-width-sm:     .2em !default;
 $spinner-border-color:        $gray-300;
 $spinner-animation-speed:     .75s !default;
 
+/* -------------------------------------------- */
+/* FORM OVERWRITE                               */
+/* -------------------------------------------- */
+
+$input-btn-focus-width:         0rem;
+$input-btn-focus-color-opacity: .25;
+$input-btn-focus-color:         rgba($component-active-bg, $input-btn-focus-color-opacity);
+$input-btn-focus-blur:          0;
+$input-btn-focus-box-shadow:    0 0 $input-btn-focus-blur $input-btn-focus-width $input-btn-focus-color;
+
 
 /* -------------------------------------------- */
 /* FORM TEXT                                    */
